--- a/config/database.yml
+++ b/config/database.yml
@@ -4,8 +4,8 @@ development:
   reconnect: false
   database: ideaportal_development
   pool: 5
-  username:
-  password:
+  username: achal
+  password: nandyelliidli
   host: localhost
 
 test:
@@ -14,8 +14,8 @@ test:
   reconnect: false
   database: ideaportal_test<%= ENV['TEST_ENV_NUMBER'] %>
   pool: 5
-  username:
-  password:
+  username: achal
+  password: nandyelliidli
   host: localhost
 
 production:
@@ -24,6 +24,6 @@ production:
   reconnect: false
   database: ideaportal_production
   pool: 5
-  username:
-  password:
+  username: achal
+  password: nandyelliidli
   host: localhost
